# SECTRL

./: .gitignore  README.md  job.slurm  pyproject.toml
configs/benchmarks/: d8.yaml
configs/sweeps/: reproduce_sweep.yaml
notebooks/: algorithm.ipynb  dynamics.ipynb  ieee39.ipynb  regret.ipynb  spring_chain.ipynb
src/: agent.py  algorithm.py  analysis.py  common.py  diagnostics.py  dynamics.py  estimator.py  figures.py  main.py  planner.py  run_experiments.py  runner.py  system_generator.py
tests/: test_diagnostics.py  test_dynamics.py  test_estimator.py  test_planner.py  test_system_generator.py
