[project]
name = "sectrl"
version = "0.1.0"
authors = [
    { name = "Nikolas Kirschstein", email = "nikolas.kirschstein@tum.de" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
